# Theseus

./: .gitignore  Cargo.toml  Makefile
applications/shell/src/: lib.rs
cfg/: Config.mk
components/basic/: Cargo.toml
components/basic/src/: lib.rs
filesystems/basic/src/: lib.rs
kernel/block_allocator/src/: lib.rs
kernel/captain/: Cargo.toml
kernel/captain/src/: lib.rs
kernel/crate_metadata/src/: lib.rs
kernel/device_manager/src/: lib.rs
kernel/first_application/src/: lib.rs
kernel/fs_node/src/: lib.rs
kernel/logger_x86_64/src/: lib.rs
kernel/memory/src/: lib.rs
kernel/memory/src/paging/: mod.rs  table.rs
kernel/memory_initialization/src/: lib.rs
kernel/memory_x86_64/src/: lib.rs
kernel/mod_mgmt/src/: lib.rs  parse_nano_core.rs  serde.rs
kernel/multicore_bringup/src/: lib.rs
kernel/multiple_heaps/src/: lib.rs
kernel/nano_core/: build.rs
kernel/nano_core/src/: lib.rs
kernel/nano_core/src/asm/: ap_boot.asm  ap_realmode.asm
kernel/page_allocator/src/: lib.rs
kernel/panic_entry/src/: lib.rs
kernel/scheduler/src/: lib.rs
kernel/storage_manager/src/: lib.rs
kernel/task/src/: lib.rs
kernel/test_kernel/: Cargo.toml
kernel/test_kernel/src/: lib.rs
rust-os-gdb/include/: bfd.h
rust-os-gdb/lib/: libbfd.la  libopcodes.la
rust-os-gdb/share/info/: annotate.info  bfd.info  gdb.info  stabs.info
rust-os-gdb/share/man/man1/: gcore.1  gdb.1  gdbserver.1
rust-os-gdb/share/man/man5/: gdbinit.5
tools/copy_latest_crate_objects/src/: main.rs
tools/grub_cfg_generation/src/: main.rs
