[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
mod_mgmt = {path = "../../kernel/mod_mgmt"}
memory = {path = "../../kernel/memory"}
logger_x86_64 = {path = "../../kernel/logger_x86_64"}

[lib]
crate-type = ["rlib"]
