[package]
name = "test_kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
mod_mgmt = {path = "../mod_mgmt"}
memory = {path = "../memory"}
logger_x86_64 = {path = "../logger_x86_64"}

[lib]
crate-type = ["rlib"]
